# forge

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  compose.yaml  config.yaml  pyproject.toml  requirements.txt
cli/: __init__.py  forge.py
engine/: __init__.py  config.py  deps.py  logs.py  main.py  parser.py  preflight.py  publisher.py  runner.py  runs.py  scheduler.py  slack.py
examples/: lib-core.yaml  lib-http.yaml  service-api.yaml
examples/isolation-tests/: test-fs-escape.yaml  test-network-egress.yaml  test-oom.yaml
infra/: main.tf  outputs.tf  provision.sh  terraform.tfvars.example  variables.tf
registry/: __init__.py  auth.py  db.py  init_db.py  main.py  metadata.py  resolver.py  storage.py
tests/: test_deps.py  test_e2e.py  test_parser.py  test_preflight.py  test_resolver.py  test_scheduler.py
