[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "A mini CI/CD platform with an integrated artifact registry."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "click>=8.1.7",
  "passlib[argon2]>=1.7.4",
]

[project.scripts]
forge = "cli.forge:main"

[tool.setuptools]
packages = ["engine", "registry", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
